--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Туристичний сайт - Контакти та зворотній зв’язок</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Туристичний сайт</h1>
+      <h1>Туристичний сайт</h1>
     </header>
     <nav>
-        <ul>
-            <li><a href="index.html">Головна</a></li>
-            <li><a href="travel.html">Подорожі та тури</a></li>
-            <li><a href="tips.html">Поради та інформація для туристів</a></li>
-            <li><a href="contact.html">Контакти та зворотній зв’язок</a></li>
-        </ul>
+      <ul>
+        <li><a href="index.html">Головна</a></li>
+        <li><a href="travel.html">Подорожі та тури</a></li>
+        <li><a href="tips.html">Поради та інформація для туристів</a></li>
+        <li><a href="contact.html">Контакти та зворотній зв’язок</a></li>
+      </ul>
     </nav>
     <section id="contact">
-        <h2>Контакти та зворотній зв’язок</h2>
-        <p>Щоб зв’язатися з нами або отримати додаткову інформацію, будь ласка, скористайтеся нашою контактною інформацією:</p>
-        <p><strong>Адреса:</strong> вул. Туристична, 1, м. Київ, Україна</p>
-        <p><strong>Телефон:</strong> +380123456789</p>
-        <p><strong>Email:</strong> info@tourist-site.com</p>
-        <p>Будь ласка, не соромтеся зв’язатися з нами, і ми з радістю відповімо на ваші запитання та надамо необхідну допомогу.</p>
+      <h2>Контакти та зворотній зв’язок</h2>
+      <p>
+        Щоб зв’язатися з нами або отримати додаткову інформацію, будь ласка,
+        скористайтеся нашою контактною інформацією:
+      </p>
+      <p><strong>Адреса:</strong> вул. Туристична, 1, м. Київ, Україна</p>
+      <p><strong>Телефон:</strong> +380123456789</p>
+      <p><strong>Email:</strong> info@tourist-site.com</p>
+      <p>
+        Будь ласка, не соромтеся зв’язатися з нами, і ми з радістю відповімо на
+        ваші запитання та надамо необхідну допомогу.
+      </p>
     </section>
     <footer>
-        <p>Туристичний сайт &copy; 2024</p>
+      <p>Туристичний сайт &copy; 2024</p>
     </footer>
-</body>
+  </body>
 </html>
