--- a/travel.html
+++ b/travel.html
@@ -15,6 +15,8 @@
         <li><a href="travel.html">Подорожі та тури</a></li>
         <li><a href="tips.html">Поради та інформація для туристів</a></li>
         <li><a href="contact.html">Контакти та зворотній зв’язок</a></li>
+        <li><a href="news.html">Новини</a></li>
+        <li><a href="events.html">Події</a></li>
       </ul>
     </nav>
     <section id="travel">
